--- a/Señalizacion.html
+++ b/Señalizacion.html
@@ -50,7 +50,7 @@
                             <li><a href="index.html" class="active">Menu Principal</a></li>
                             <li><a href="#welcome">Inicio</a></li>
                             <li><a href="#features">Acerca</a></li>
-                            <li><a href="fotoseñalizacion.html">Fotografías</a></li>
+                            <li><a href="FotoSeñalizacion.html">Fotografías</a></li>
                             <li><a href="#contact-us">Contáctanos</a></li>                            
                         </ul>
                         <a class='menu-trigger'>
