--- a/Exhibidores.html
+++ b/Exhibidores.html
@@ -181,7 +181,7 @@
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-                        <a href="#" class="mini-box">
+                        <a href="DiseñoSublimacion.html" class="mini-box">
                             <i><img src="assets/images/servicio5.png" alt=""></i>
                             <strong>Diseño y Sublimación</strong>
                         </a>
