--- a/Catalogo.html
+++ b/Catalogo.html
@@ -29,9 +29,8 @@
     <section id="content">
       <div class="container_12">
         <article class="content-box">
-
-          <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=713gm9hgvu" width="100%" height="480" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen></iframe>
-
+          
+          <iframe src="https://cdn.flipsnack.com/widget/v2/widget.html?hash=z98bjjt6rh" width="100%" height="480" seamless="seamless" scrolling="no" frameBorder="0" allowFullScreen></iframe>
 
         </article>
       </div>
